# ml-nutriscore-prediction

./: .editorconfig  .gitignore  README.md  plotting.sh  pyproject.toml  requirements.txt  run-preprocessing.sh  run-training-and-evaluation.sh  setup.py
docs/: preprocessing_pipeline.md
docs/notebooks/: eda.ipynb  model_evaluation.ipynb  preprocessing.ipynb
models/: README.md
models/trained/knn/: knn_v1_metadata.json
models/trained/logistic_regression/: logistic_regression_v1_metadata.json
models/trained/random_forest/: random_forest_v1_metadata.json
models/trained/svm/: svm_v1_metadata.json  svm_v2_tuned_metadata.json  tuning_results.json
models/trained/xgboost/: xgboost_v1_metadata.json
report/: report.tex
scripts/: download_data.py  evaluate_model.py  plot_model_comparison.py  run_preprocessing.py  train_model.py  tune_model.py  tune_random_forest.py  tune_svm.py
src/data/: countries_mappings.py  data_loader.py  preprocessing.py
src/features/: dimensionality_reduction.py  encoding.py  feature_engineering.py  outlier_removal.py  preprocessing_pipeline.py  scaling.py
src/models/: README.md  __init__.py  base_model.py  knn.py  logistic_regression.py  model_execution.md  model_registry.py  random_forest.py  svm.py  xgboost.py
